<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:elevation="@dimen/card_elevation"
    android:padding="@dimen/viewsPadding"
    app:cardCornerRadius="@dimen/card_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/viewsPadding"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/viewsPadding"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/icon_img_width"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/subreddit_icon"
                        android:src="@drawable/ic_launcher_background" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/viewsPadding"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/subredditPrefixed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/viewsPadding"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:layout_marginLeft="@dimen/activity_vertical_margin"
                            android:textSize="@dimen/smallTextSize"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/activity_vertical_margin"
                            android:padding="@dimen/viewsPadding"
                            android:layout_marginLeft="@dimen/activity_vertical_margin"

                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/author"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:background="@drawable/point" />

                            <TextView
                                android:id="@+id/hours"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:background="@drawable/point" />

                            <TextView
                                android:id="@+id/domain"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/smallTextSize" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/cardview_shadow_start_color" />

                <ScrollView
                    android:layout_width="wrap_content"
                    android:padding="@dimen/viewsPadding"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post post "
                        android:textSize="@dimen/textSize"
                        android:textStyle="bold">

                    </TextView>
                </ScrollView>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/img_Post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/imageheight"
            android:contentDescription="@string/post_photo"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/viewsPadding"

            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/viewsPadding"

                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/upVote"
                        android:background="@drawable/vote_up" />

                    <TextView
                        android:id="@+id/ups"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="@dimen/viewsPadding"
                        android:gravity="center"
                        android:text="votes" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/downVote"
                        android:layout_height="wrap_content"
                        android:background="@drawable/vote_down_24dp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/cardview_dark_background" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/comment_linear"
                android:padding="@dimen/viewsPadding"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/comment" />

                <TextView
                    android:id="@+id/num_comments"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/cardview_dark_background" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/viewsPadding"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/share" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:text="@string/share" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>



